--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "loaders.css": "^0.1.2",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-loaders": "^3.0.1",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
